fix layout on mobile

--- a/src/app/components/Header/Header.module.css
+++ b/src/app/components/Header/Header.module.css
@@ -10,6 +10,7 @@
     background: white;
     width: 100%;
     height: 110px;
+    overflow: scroll;
 }
 
 .title {
